--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -25,6 +25,9 @@ $background-grey-dark: #000;
 $background-dark-light: #252527;
 $background-dark: #000;
 
+$background-success: #84b84c1f;
+$background-error: #ff00001f;
+
 $success: #84b84c;
 $error: #f00;
 
